# efl

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  CMakeLists.txt~  abstract_simulator.cpp  abstract_simulator.hpp  book.cpp  book_config.cpp  book_config.hpp  book_result.hpp  config_result.cpp  csv_helper.cpp  csv_helper.hpp  csv_parser.cpp  csv_parser.hpp  file_helper.cpp  simulator_config.cpp  simulator_config.hpp  stock_data.cpp
src/efl/: CMakeLists.txt  abstract_simulator.cpp  abstract_simulator.hpp  book.cpp  book.hpp  book_config.cpp  book_config.hpp  config_result.cpp  config_result.hpp  csv_parser.cpp  csv_parser.hpp  file_helper.cpp  file_helper.hpp  simulator_config.cpp  simulator_config.hpp  stock_data.cpp  stock_data.hpp
src/efl/sources/: CMakeLists.txt
src/efl/sources/yahoo/: CMakeLists.txt  yahoo_config.cpp  yahoo_config.hpp  yahoo_helper.cpp  yahoo_helper.hpp  yahoo_histo_data.cpp  yahoo_histo_data.hpp  yahoo_provider.cpp  yahoo_provider.hpp  yahoo_quote.cpp  yahoo_quote.hpp
src/efl/util/: CMakeLists.txt  fmt_util.hpp
src/efl/util/net/: CMakeLists.txt  https_client.cpp  https_client.hpp  https_client_helper.cpp  https_client_helper.hpp
src/examples/: CMakeLists.txt  cac40.json  dummy_strat.cpp  dummy_strat_simulator.cpp  dummy_strat_simulator.hpp  investing-indices-full.json  investing-indices.json  investing_ticker_yahoo_checker.cpp  sqlite_manager_example.cpp  yahoo_finance_request.cpp  yahoo_provider_example.cpp  yf_get_histo_data.cpp  yf_get_quotes.cpp  yf_read_ohlcv_file.cpp  yf_request.cpp
test/: CMakeLists.txt  efl_tests.cpp
test/efl/: book_config_tests.cpp  book_tests.cpp  csv_helper_tests.cpp  simulator_config_tests.cpp  stock_data_tests.cpp
